--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,5 +3,10 @@
   "extends": "@docusaurus/tsconfig/tsconfig.json",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "references": [
+    {
+      "path": "./tsconfig.worker.json"
+    }
+  ]
 }
