chore: add Deploy Docs

--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -16,7 +16,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "catalog:tailwindcss4",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.8"
