--- a/website/tsconfig.worker.json
+++ b/website/tsconfig.worker.json
@@ -10,8 +10,9 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": [
-      "@cloudflare/workers-types",
-      "node"
+      // "@cloudflare/workers-types",
+      "node",
+      "./worker-configuration.d.ts"
     ],
     "strict": true,
     "skipLibCheck": true
