--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "website",
-  "version": "0.0.8",
+  "name": "@weapp-tailwindcss/website",
+  "version": "1.0.0",
   "private": true,
   "author": "ice breaker <1324318532@qq.com>",
   "repository": {
