chore(deps): upgrade

--- a/website/package.json
+++ b/website/package.json
@@ -42,6 +42,7 @@
     "@weapp-tailwindcss/merge": "workspace:*",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "hono": "^4.7.11",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -58,7 +59,7 @@
     "@playwright/test": "^1.53.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.0.1",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.6",
