--- a/apps/taro-webpack-tailwindcss-v4/package.json
+++ b/apps/taro-webpack-tailwindcss-v4/package.json
@@ -11,7 +11,7 @@
   },
   "author": "",
   "scripts": {
-    "build": "yarn build:weapp",
+    "build": "pnpm build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
