--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -2,6 +2,7 @@
   "name": "taro-webpack-tailwindcss-v4",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "yarn@1.22.22",
   "description": "",
   "templateInfo": {
     "name": "default",
@@ -70,7 +71,7 @@
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-react": "^7.27.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
-    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tarojs/cli": "4.1.1",
     "@tarojs/taro-loader": "4.1.1",
     "@tarojs/webpack5-runner": "4.1.1",
@@ -86,11 +87,11 @@
     "postcss": "^8.5.4",
     "react-refresh": "^0.17.0",
     "stylelint": "^16.20.0",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^4.1.10",
     "tailwindcss-patch": "^7.1.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.8.3",
-    "weapp-ide-cli": "^2.0.12",
+    "weapp-ide-cli": "^3.0.0",
     "weapp-tailwindcss": "^4.1.8",
     "webpack": "5.99.9"
   }
