--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@babel/core": "^7.27.4",
     "@babel/generator": "~7.27.5",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.4",
+    "@changesets/cli": "^2.29.5",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/prompt-cli": "^19.8.1",
@@ -108,9 +108,9 @@
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
     "@eslint/config-inspector": "^1.1.0",
-    "@icebreakers/eslint-config": "^1.1.8",
-    "@icebreakers/monorepo": "^1.0.4",
-    "@icebreakers/stylelint-config": "^1.0.2",
+    "@icebreakers/eslint-config": "^1.2.0",
+    "@icebreakers/monorepo": "^1.0.5",
+    "@icebreakers/stylelint-config": "^1.1.0",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@tsconfig/recommended": "^1.0.10",
@@ -174,7 +174,8 @@
     "diff": "^8.0.2",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "es-toolkit": "^1.39.3",
+    "es-toolkit": "^1.39.4",
+    "esbuild": "^0.25.5",
     "eslint": "^9.29.0",
     "execa": "^9.6.0",
     "express": "^5.1.0",
