feat(dev): add Prettier configuration files and plugins

--- a/package.json
+++ b/package.json
@@ -108,9 +108,11 @@
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
     "@eslint/config-inspector": "^1.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@icebreakers/eslint-config": "^1.2.1",
     "@icebreakers/monorepo": "^1.0.5",
     "@icebreakers/stylelint-config": "^1.1.0",
+    "@prettier/plugin-oxc": "^0.0.3",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@tsconfig/recommended": "^1.0.10",
