--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "plugins": ["@prettier/plugin-oxc", "@ianvs/prettier-plugin-sort-imports"],
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@prettier/plugin-oxc",
+    "@ianvs/prettier-plugin-sort-imports"
+  ],
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
@@ -11,10 +15,10 @@
   "objectWrap": "collapse",
   "bracketSameLine": true,
   "endOfLine": "lf",
-  
+
   "overrides": [
-    {"files": ["**/*.html", "**/*.svg"], "options": {"parser": "html", "tabWidth": 4}},
-    {"files": ["**/*.vue"], "options": {"parser": "vue", "tabWidth": 4}},
-    {"files": ["**/*.css"], "options": {"parser": "css", "tabWidth": 4}}
+    { "files": ["**/*.html", "**/*.svg"], "options": { "parser": "html", "tabWidth": 4 } },
+    { "files": ["**/*.vue"], "options": { "parser": "vue", "tabWidth": 4 } },
+    { "files": ["**/*.css"], "options": { "parser": "css", "tabWidth": 4 } }
   ]
 }
