--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "postcss-preset-env": "^10.2.3",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
     "sass": "^1.89.2",
