--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "es-toolkit": "^1.39.4",
     "esbuild": "^0.25.5",
     "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
     "execa": "^9.6.0",
     "express": "^5.1.0",
     "fast-glob": "^3.3.3",
