--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry=http://registry.npmmirror.com/
+# registry=http://registry.npmmirror.com/
 # registry=http://registry.npmjs.org/
 msvs_version=2017
 git-checks=false
