--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -90,7 +90,8 @@
     "local-pkg": "^1.1.1",
     "semver": "^7.7.2",
     "tailwind-merge": "^3.3.1",
-    "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0"
+    "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "weapp-tailwindcss": "workspace:*"
