chore: bump version

--- a/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@weapp-talwindcss/debug-uni-app-x": "workspace:*",
-    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.2",
     "weapp-tailwindcss": "workspace:*"
   }
