chore: fix stylus

--- a/package.json
+++ b/package.json
@@ -241,5 +241,10 @@
     "webpack": "^5.100.2",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "stylus": "github:stylus/stylus#0.64.0"
+    }
   }
 }
