--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "semver": "7.7.2",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
+    "stylus": "github:stylus/stylus#0.64.0",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
     "terser-webpack-plugin": "^5.3.14",
@@ -241,10 +242,5 @@
     "webpack": "^5.100.2",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "stylus": "github:stylus/stylus#0.64.0"
-    }
   }
 }
