chore: bump version

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 # registry=http://registry.npmmirror.com/
-# registry=http://registry.npmjs.org/
+registry=http://registry.npmjs.org/
 msvs_version=2017
 git-checks=false
 package-manager-strict=false
