--- a/apps/taro-webpack-tailwindcss-v4/package.json
+++ b/apps/taro-webpack-tailwindcss-v4/package.json
@@ -77,7 +77,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^18.3.23",
     "@types/webpack-env": "^1.13.6",
-    "@weapp-tailwindcss/merge": "^1.2.3-alpha.0",
+    "@weapp-tailwindcss/merge": "workspace:*",
     "babel-preset-taro": "4.1.4",
     "postcss": "^8.5.6",
     "react-refresh": "^0.17.0",
