chore(tailwindcss-config): add access and registry

--- a/packages/tailwindcss-config/package.json
+++ b/packages/tailwindcss-config/package.json
@@ -44,7 +44,9 @@
     },
     "main": "./dist/index.cjs",
     "module": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "types": "./dist/index.d.ts",
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
     "jiti": "^2.5.1",
