--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "extract": "tw-patch extract"
+    "extract": "tw-patch extract",
+    "build": "echo uni-app-x-hbuilderx-tailwindcss3"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-patch": "^7.1.3",
-    "weapp-tailwindcss": "4.2.0-alpha.1"
+    "@weapp-tailwindcss/merge": "^1.2.3",
+    "tailwindcss": "3",
+    "tailwindcss-patch": "^7.1.4",
+    "weapp-ide-cli": "^3.0.0",
+    "weapp-tailwindcss": "^4.2.0"
   }
 }
