--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "extract": "tw-patch extract"
+    "extract": "tw-patch extract",
+    "build": "echo uni-app-x-hbuilderx-tailwindcss4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@weapp-tailwindcss/merge": "^1.2.3",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-patch": "^7.1.3",
-    "weapp-tailwindcss": "4.2.0-alpha.1"
+    "tailwindcss-patch": "^7.1.4",
+    "weapp-ide-cli": "^3.0.0",
+    "weapp-tailwindcss": "^4.2.0"
   }
 }
