--- a/website/package.json
+++ b/website/package.json
@@ -70,6 +70,7 @@
     "theme-transition": "workspace:*",
     "typedoc": "^0.28.8",
     "typedoc-plugin-markdown": "4.7.1",
+    "webpack": "5.101.0",
     "webpack-node-externals": "^3.0.0"
   },
   "browserslist": {
