--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "@types/js-beautify": "^1.14.3",
     "@types/jsdom": "^21.1.7",
     "@types/klaw": "^3.0.7",
-    "@types/lint-staged": "^13.3.0",
+    "@types/lint-staged": "^14.0.0",
     "@types/loader-utils": "^2.0.6",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
@@ -154,6 +154,7 @@
     "@vitest/coverage-v8": "~3.2.4",
     "@vitest/ui": "~3.2.4",
     "@weapp-tailwindcss/shared": "workspace:*",
+    "@weapp-tailwindcss/test-helper": "workspace:*",
     "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
@@ -180,7 +181,7 @@
     "execa": "^9.6.0",
     "express": "^5.1.0",
     "fast-glob": "^3.3.3",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.3.1",
     "get-value": "^4.0.1",
     "gulp": "^5.0.1",
     "gulp-postcss": "^10.0.0",
@@ -196,7 +197,7 @@
     "lodash-es": "^4.17.21",
     "md5": "2.3.0",
     "micromatch": "^4.0.8",
-    "mini-css-extract-plugin": "^2.9.2",
+    "mini-css-extract-plugin": "^2.9.3",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^4.1.0",
     "npm-registry-fetch": "^18.0.2",
@@ -212,8 +213,8 @@
     "prettier": "^3.6.2",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
-    "sass": "^1.89.2",
-    "sass-embedded": "^1.89.2",
+    "sass": "^1.90.0",
+    "sass-embedded": "^1.90.0",
     "sass-true": "^9.0.0",
     "semver": "7.7.2",
     "set-value": "^4.1.0",
@@ -223,7 +224,7 @@
     "terser-webpack-plugin": "^5.3.14",
     "traverse": "^0.6.11",
     "ts-morph": "^26.0.0",
-    "tsd": "^0.32.0",
+    "tsd": "^0.33.0",
     "tslib": "^2.8.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
@@ -233,13 +234,13 @@
     "uuid": "^11.1.0",
     "vinyl": "^3.0.1",
     "vinyl-fs": "^4.0.2",
-    "vite": "^7.0.6",
+    "vite": "^7.1.0",
     "vite-plugin-inspect": "^11.3.2",
     "vitest": "~3.2.4",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "5.101.0",
     "webpack-build-utils": "^0.0.7",
-    "yaml": "^2.8.0"
+    "yaml": "^2.8.1"
   }
 }
