--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "script:init": "monorepo init",
     "script:sync": "monorepo sync",
     "script:clean": "monorepo clean",
-    "script:mirror": "monorepo mirror"
+    "script:mirror": "monorepo mirror",
+    "commitlint": "commitlint --edit"
   },
   "publishConfig": {
     "access": "public",
@@ -108,9 +109,9 @@
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
     "@eslint/config-inspector": "^1.1.0",
-    "@icebreakers/eslint-config": "^1.3.3",
-    "@icebreakers/monorepo": "^1.0.8",
-    "@icebreakers/stylelint-config": "^1.1.1",
+    "@icebreakers/eslint-config": "^1.3.4",
+    "@icebreakers/monorepo": "^1.0.11",
+    "@icebreakers/stylelint-config": "^1.1.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@tsconfig/recommended": "^1.0.10",
@@ -133,7 +134,6 @@
     "@types/js-beautify": "^1.14.3",
     "@types/jsdom": "^21.1.7",
     "@types/klaw": "^3.0.7",
-    "@types/lint-staged": "^14.0.0",
     "@types/loader-utils": "^2.0.6",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
@@ -159,7 +159,7 @@
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "boxen": "^8.0.1",
-    "browserslist": "^4.25.1",
+    "browserslist": "^4.25.2",
     "chokidar": "^4.0.3",
     "ci-info": "^4.3.0",
     "colorette": "^2.0.20",
@@ -175,7 +175,7 @@
     "diff": "^8.0.2",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "es-toolkit": "^1.39.8",
+    "es-toolkit": "^1.39.9",
     "esbuild": "^0.25.8",
     "eslint": "^9.33.0",
     "execa": "^9.6.0",
@@ -186,7 +186,7 @@
     "gulp": "^5.0.1",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "js-beautify": "^1.15.4",
     "jsdom": "^26.1.0",
     "klaw": "^4.1.0",
@@ -197,7 +197,7 @@
     "lodash-es": "^4.17.21",
     "md5": "2.3.0",
     "micromatch": "^4.0.8",
-    "mini-css-extract-plugin": "^2.9.3",
+    "mini-css-extract-plugin": "^2.9.4",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^4.1.0",
     "npm-registry-fetch": "^18.0.2",
@@ -225,21 +225,21 @@
     "traverse": "^0.6.11",
     "ts-morph": "^26.0.0",
     "tsd": "^0.33.0",
-    "tslib": "^2.8.0",
+    "tslib": "^2.8.1",
     "tsup": "^8.5.0",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.4",
     "turbo": "^2.5.5",
     "typescript": "^5.9.2",
     "unbuild": "^3.6.0",
     "uuid": "^11.1.0",
     "vinyl": "^3.0.1",
     "vinyl-fs": "^4.0.2",
-    "vite": "^7.1.1",
+    "vite": "^7.1.2",
     "vite-plugin-inspect": "^11.3.2",
     "vitest": "~3.2.4",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "5.101.0",
+    "webpack": "5.101.1",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.1"
   }
