--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -6,9 +6,9 @@
     "extract": "tw-patch extract"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "catalog:tailwindcss4",
     "tailwindcss-patch": "^7.1.4",
     "weapp-tailwindcss": "workspace:*"
   }
