--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,9 +11,10 @@ catalogs:
   tailwindcss3:
     tailwindcss: ^3.4.17
   tailwindcss4:
-    tailwindcss: ^4.1.11
-    tailwindcss4: npm:tailwindcss@^4.1.11
-
+    '@tailwindcss/postcss': ^4.1.12
+    '@tailwindcss/vite': ^4.1.12
+    tailwindcss: ^4.1.12
+    tailwindcss4: npm:tailwindcss@^4.1.12
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - '@tarojs/binding'
