chore: add bench test

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "build:apps": "turbo run build --filter=./apps/*",
     "build:pkg": "turbo run build --filter=./packages/*",
     "test": "vitest run",
+    "test:bench": "vitest bench",
     "test:plugins": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/*",
     "test:typography": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/typography",
     "test:core": "vitest run --coverage.enabled --coverage.all=false --project=weapp-tailwindcss",
@@ -58,6 +59,7 @@
     "e2e": "vitest run -c ./e2e/vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
+    "e2e:u:native": "vitest run -u -c ./e2e/vitest.e2e.config.ts --exclude ./e2e/index.test.ts",
     "demo:build": "tsx scripts/demo/build.ts --babel && pnpm run build:apps",
     "demo:install": "tsx scripts/demo/install.ts",
     "demo:install:beta": "tsx scripts/demo/install.ts --beta",
