chore(demo): upgrade

--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -42,31 +42,32 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-plus": "3.0.0-4050620250312001",
-    "@dcloudio/uni-components": "3.0.0-4050620250312001",
-    "@dcloudio/uni-h5": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4050620250312001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4050620250312001",
+    "@dcloudio/uni-app": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app-plus": "3.0.0-4070620250821001",
+    "@dcloudio/uni-components": "3.0.0-4070620250821001",
+    "@dcloudio/uni-h5": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
     "tailwindcss-core-plugins-extractor": "^0.2.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4050620250312001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4050620250312001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4050620250312001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4050620250312001",
+    "@dcloudio/uni-automator": "3.0.0-4070620250821001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4070620250821001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4070620250821001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4070620250821001",
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@iconify-json/lucide": "^1.2.29",
     "@iconify-json/mdi": "^1.2.3",
