--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -43,21 +43,22 @@
     "up:uniapp": "npx @dcloudio/uvm@latest"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-plus": "3.0.0-4050620250312001",
-    "@dcloudio/uni-components": "3.0.0-4050620250312001",
-    "@dcloudio/uni-h5": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4050620250312001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4050620250312001",
+    "@dcloudio/uni-app": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app-plus": "3.0.0-4070620250821001",
+    "@dcloudio/uni-components": "3.0.0-4070620250821001",
+    "@dcloudio/uni-h5": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
     "@weapp-core/escape": "^2.1.0",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
@@ -75,10 +76,10 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4050620250312001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4050620250312001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4050620250312001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4050620250312001",
+    "@dcloudio/uni-automator": "3.0.0-4070620250821001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4070620250821001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4070620250821001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4070620250821001",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
