--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@weapp-tailwindcss/mangle": "workspace:*",
+    "postcss-calc": "^10.1.1",
     "postcss-value-parser": "^4.2.0"
   }
 }
