--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@babel/core": "^7.28.4",
     "@babel/generator": "~7.28.3",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.6",
+    "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/prompt-cli": "^19.8.1",
@@ -235,7 +235,7 @@
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
     "unbuild": "^3.6.1",
-    "uuid": "^12.0.0",
+    "uuid": "^13.0.0",
     "vinyl": "^3.0.1",
     "vinyl-fs": "^4.0.2",
     "vite": "^7.1.5",
@@ -246,5 +246,11 @@
     "webpack": "5.101.3",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.1"
+  },
+  "_pnpm": {
+    "overrides": {
+      "error-ex": "1.3.2",
+      "strip-ansi": "7.1.2"
+    }
   }
 }
