--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,4 @@ registry=http://registry.npmjs.org/
 msvs_version=2017
 git-checks=false
 package-manager-strict=false
-shamefully-hoist=true
+# shamefully-hoist=true
