--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -58,6 +58,7 @@
     "postcss-selector-parser": "~7.1.0"
   },
   "devDependencies": {
+    "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@weapp-tailwindcss/mangle": "workspace:*",
     "postcss-calc": "^10.1.1",
     "postcss-value-parser": "^4.2.0"
