--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -201,5 +201,11 @@
     "tailwindcss-patch": "~7.1.5",
     "vue": "^3.5.21",
     "webpack-sources": "3.3.3"
+  },
+  "devDependencies": {
+    "@ampproject/remapping": "^2.3.0",
+    "@csstools/postcss-is-pseudo-class": "^5.0.3",
+    "clsx": "^2.1.1",
+    "rollup": "^4.50.1"
   }
 }
