--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -42,6 +42,7 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "^7.28.4",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
@@ -75,7 +76,7 @@
     "typescript": "^5.7.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.2.9",
+    "weapp-tailwindcss": "^4.3.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   },
