--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -92,7 +92,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.2",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.2.9",
+    "weapp-tailwindcss": "^4.3.0-alpha.0",
     "webpack": "5.101.3"
   }
 }
