--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -13,6 +13,6 @@
     "tailwindcss": "^4.1.13",
     "tailwindcss-patch": "^7.1.5",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.2.9"
+    "weapp-tailwindcss": "^4.3.0-alpha.0"
   }
 }
