chore(demo): upgrade

--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -63,7 +63,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.3.0-alpha.0",
+    "weapp-tailwindcss": "^4.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
