--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -87,7 +87,7 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.3.0-alpha.0",
+    "weapp-tailwindcss": "^4.3.0",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
