--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -76,7 +76,7 @@
     "typescript": "^5.7.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.3.0-alpha.0",
+    "weapp-tailwindcss": "^4.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   },
