--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -52,7 +52,7 @@
     "tailwindcss-patch": "^7.1.5",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.3.0-alpha.0",
+    "weapp-tailwindcss": "^4.3.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "originTemplate": "@rax-materials/scaffolds-app-ts"
