--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -12,6 +12,6 @@
     "tailwindcss": "3",
     "tailwindcss-patch": "^7.1.5",
     "weapp-ide-cli": "^3.1.0",
-    "weapp-tailwindcss": "^4.3.0-alpha.0"
+    "weapp-tailwindcss": "^4.3.0"
   }
 }
