--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -61,6 +61,7 @@
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@weapp-tailwindcss/mangle": "workspace:*",
     "postcss-calc": "^10.1.1",
+    "postcss-custom-properties": "^14.0.6",
     "postcss-value-parser": "^4.2.0"
   }
 }
