chore: bump version

--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -55,13 +55,13 @@
     "postcss-preset-env": "^10.3.1",
     "postcss-pxtransform": "^4.1.6",
     "postcss-rem-to-responsive-pixel": "~6.1.0",
-    "postcss-selector-parser": "~7.1.0"
+    "postcss-selector-parser": "~7.1.0",
+    "postcss-value-parser": "^4.2.0"
   },
   "devDependencies": {
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@weapp-tailwindcss/mangle": "workspace:*",
     "postcss-calc": "^10.1.1",
-    "postcss-custom-properties": "^14.0.6",
-    "postcss-value-parser": "^4.2.0"
+    "postcss-custom-properties": "^14.0.6"
   }
 }
