--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.17.0",
+  "packageManager": "pnpm@10.17.1",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -114,7 +114,7 @@
     "@csstools/css-tokenizer": "^3.0.4",
     "@eslint/config-inspector": "^1.3.0",
     "@icebreakers/eslint-config": "^1.4.4",
-    "@icebreakers/monorepo": "^1.2.2",
+    "@icebreakers/monorepo": "^1.2.4",
     "@icebreakers/stylelint-config": "^1.1.4",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
@@ -194,7 +194,7 @@
     "jsdom": "^27.0.0",
     "klaw": "^4.1.0",
     "lightningcss": "^1.30.1",
-    "lint-staged": "^16.1.6",
+    "lint-staged": "^16.2.0",
     "local-pkg": "^1.1.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -213,7 +213,7 @@
     "postcss-js": "^5.0.0",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.2.0",
-    "postcss-preset-env": "^10.3.1",
+    "postcss-preset-env": "^10.4.0",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
     "promisify-loader-runner": "^1.0.1",
@@ -234,12 +234,13 @@
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
     "turbo": "^2.5.6",
+    "type-fest": "^5.0.1",
     "typescript": "^5.9.2",
     "unbuild": "^3.6.1",
     "uuid": "^13.0.0",
     "vinyl": "^3.0.1",
     "vinyl-fs": "^4.0.2",
-    "vite": "^7.1.6",
+    "vite": "^7.1.7",
     "vite-plugin-inspect": "^11.3.3",
     "vitest": "~3.2.4",
     "weapp-tailwindcss": "workspace:*",
