--- a/website/package.json
+++ b/website/package.json
@@ -43,7 +43,9 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-github-btn": "^1.4.0"
+    "react-github-btn": "^1.4.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.1",
