--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -122,9 +122,9 @@
     "./css": "./css/index.css",
     "./*": "./*"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "style": "index.css",
   "typesVersions": {
     "*": {
@@ -171,7 +171,6 @@
     "release": "tsx scripts/release.ts",
     "lint": "eslint .",
     "lint:fix": "eslint ./src --fix",
-    "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
   },
   "publishConfig": {
@@ -198,7 +197,7 @@
     "lru-cache": "10.4.3",
     "magic-string": "0.30.19",
     "semver": "~7.7.2",
-    "tailwindcss-patch": "~7.1.5",
+    "tailwindcss-patch": "~7.1.6",
     "vue": "^3.5.22",
     "webpack-sources": "3.3.3"
   },
