chore(deps): upgrade

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
         "^build"
       ],
       "outputs": [
-        "dist/**"
+        "dist/**",
+        "build/**"
       ]
     },
     "lint": {
