--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.18.0",
+  "packageManager": "pnpm@10.18.1",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -106,16 +106,14 @@
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@commitlint/prompt-cli": "^20.1.0",
-    "@commitlint/types": "^20.0.0",
     "@csstools/css-color-parser": "^3.1.0",
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
     "@eslint/config-inspector": "^1.3.0",
-    "@icebreakers/eslint-config": "^1.4.5",
-    "@icebreakers/monorepo": "^2.0.2",
-    "@icebreakers/stylelint-config": "^1.1.5",
+    "@icebreakers/commitlint-config": "^1.2.0",
+    "@icebreakers/eslint-config": "^1.5.0",
+    "@icebreakers/monorepo": "^2.0.5",
+    "@icebreakers/stylelint-config": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "^4.1.14",
     "@tsconfig/recommended": "^1.0.10",
@@ -136,7 +134,7 @@
     "@types/gulp-rename": "^2.0.6",
     "@types/gulp-sass": "^5.0.4",
     "@types/js-beautify": "^1.14.3",
-    "@types/jsdom": "^21.1.7",
+    "@types/jsdom": "^27.0.0",
     "@types/klaw": "^3.0.7",
     "@types/loader-utils": "^2.0.6",
     "@types/lodash": "^4.17.20",
@@ -221,9 +219,10 @@
     "sass": "^1.93.2",
     "sass-embedded": "^1.93.2",
     "sass-true": "^9.0.0",
-    "semver": "7.7.2",
+    "semver": "7.7.3",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.25.0",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
     "terser-webpack-plugin": "^5.3.14",
@@ -245,14 +244,8 @@
     "vitest": "~3.2.4",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "5.102.0",
+    "webpack": "5.102.1",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.1"
-  },
-  "_pnpm": {
-    "overrides": {
-      "error-ex": "1.3.2",
-      "strip-ansi": "7.1.2"
-    }
   }
 }
