--- a/apps/taro-webpack-tailwindcss-v4/package.json
+++ b/apps/taro-webpack-tailwindcss-v4/package.json
@@ -63,8 +63,8 @@
     "@tarojs/runtime": "4.1.7",
     "@tarojs/shared": "4.1.7",
     "@tarojs/taro": "4.1.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -75,7 +75,7 @@
     "@tarojs/taro-loader": "4.1.7",
     "@tarojs/webpack5-runner": "4.1.7",
     "@types/node": "^24.7.0",
-    "@types/react": "^19.2.2",
+    "@types/react": "catalog:react18",
     "@types/webpack-env": "^1.13.6",
     "@weapp-tailwindcss/merge": "workspace:*",
     "babel-preset-taro": "4.1.7",
