--- a/how-to-build-components-by-tailwindcss/react-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/react-lib/package.json
@@ -36,8 +36,8 @@
     }
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -46,8 +46,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
