chore: add skyline case

--- a/apps/vite-native-ts-skyline/tsconfig.json
+++ b/apps/vite-native-ts-skyline/tsconfig.json
@@ -36,8 +36,9 @@
     }
   ],
   "include": [
-    "**/*.ts",
-    "**/*.js"
+    "miniprogram/**/*.ts",
+    "miniprogram/**/*.js",
+    "miniprogram/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
