--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -76,7 +76,7 @@
     "typescript": "^5.7.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.3.3",
+    "weapp-tailwindcss": "^4.4.0-alpha.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   },
