--- a/packages/tailwindcss-config/package.json
+++ b/packages/tailwindcss-config/package.json
@@ -49,6 +49,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@weapp-tailwindcss/shared": "workspace:*",
     "jiti": "^2.6.1",
     "lilconfig": "^3.1.3"
   }
