--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -93,7 +93,7 @@
     "unplugin-vue-components": "^29.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0",
+    "weapp-tailwindcss": "^4.5.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.101.3"
   }
