--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -81,7 +81,7 @@
     "vite": "5.2.8",
     "vue-tsc": "^2.2.8",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0"
+    "weapp-tailwindcss": "^4.5.0-alpha.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
