--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -13,6 +13,6 @@
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0"
+    "weapp-tailwindcss": "^4.5.0-alpha.0"
   }
 }
