--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -121,7 +121,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0",
+    "weapp-tailwindcss": "^4.5.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
