--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -21,7 +21,7 @@
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0",
+    "weapp-tailwindcss": "^4.5.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22",
