--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -47,7 +47,7 @@
     "tailwindcss-patch": "^7.1.6",
     "typescript": "^4.1.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.0-alpha.1",
+    "weapp-tailwindcss": "^4.5.0",
     "webpack": "^5.43.0"
   },
   "browserslist": [
