--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -27,11 +27,13 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
+    "echarts": "^6.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "catalog:tailwindcss4",
     "unplugin-vue-router": "^0.16.0",
     "vite": "^7.1.10",
     "vite-plugin-inspect": "^11.3.3",
+    "vue-echarts": "^8.0.1",
     "vue-tsc": "^3.1.1",
     "weapp-tailwindcss": "workspace:*"
   }
