--- a/website/package.json
+++ b/website/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^24.8.1",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.1.0",
+    "docusaurus-plugin-llms": "^0.2.2",
     "docusaurus-plugin-sass": "^0.2.6",
     "docusaurus-plugin-typedoc": "1.4.2",
     "dotenv": "^17.2.3",
